# WorldModels

./: .gitignore  Makefile  pyproject.toml  train.py
configs/: __init__.py  configs.py  description.txt  multiple_env_config.py  single_env_config.py  transfer_single_env_config.py
configs/single_shot/: single_shot_single_env_config.py  single_shot_transfer_single_env_config.py
configs/slth/: slth_multiple_env_config.py  slth_single_env_config.py  slth_transfer_single_env_config.py
configs/without_prune/: multiple_env_config.py  single_env_config.py  transfer_single_env_config.py
notebooks/fujisaki/: gym_test.ipynb  multiple_env_train.ipynb  single_env_train.ipynb  transfer_single_env_train.ipynb
notebooks/fujisaki/single_shot/: single_shot_single_env_train.ipynb  single_shot_transfer_single_env_train.ipynb
notebooks/fujisaki/slth/: slth_multiple_env_train.ipynb  slth_single_env_train.ipynb  (+2 more)
notebooks/sawano/: single_env_train_snip.ipynb  single_env_train_snip20330202実行例表示あり.ipynb
requirements/: gym.txt
src/agent/: agent.py
src/buffer/: __init__.py  buffer.py
src/ftl/: __init__.py  ftl.py
src/loss/: __init__.py  lambda_target.py
src/model/: __init__.py  action.py  encoder.py  image_resnet.py  lenet.py  model_base.py  resnet.py  rssm.py  value.py  vgg.py
src/prune/: __init__.py  calc_grad.py  layerwise.py  masks.py  scores.py
src/pruner/: pruning.py
src/slth/: bns.py  layers.py  utils.py
src/utils/: __init__.py  common_utils.py  data_utils.py  date.py  gym.py  matplot_utils.py  network_utils.py  preprocess.py  prune_utils.py  save.py  seed.py
(+18 files in other folders)
