[tool.poetry]
name = "worldmodels"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "src"},
    {include = "configs"},
]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.2"
numpy = "^1.24.1"
Pillow = "^9.3.0"
PyYAML = "^6.0"
scipy = "^1.9.3"
torch = "1.11.0"
torchvision = "0.12.0"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
